ARM: tegra114: support nonsecure state detection
Principle is exactly the same as on T124, testing of register
which behaves differently in secure and non-secure states.

Signed-off-by: Svyatoslav Ryhel <clamor95@gmail.com>

--- a/arch/arm/mach-tegra/Kconfig
+++ b/arch/arm/mach-tegra/Kconfig
@@ -178,7 +178,7 @@ config TEGRA_DISCONNECT_UDC_ON_BOOT
 
 config TEGRA_SUPPORT_NON_SECURE
 	bool "Support executing U-Boot in non-secure (NS) mode"
-	depends on TEGRA124
+	depends on TEGRA114 || TEGRA124
 	help
 	  Certain impossible actions will be skipped if the CPU is in NS mode,
 	  such as ARM architectural timer initialization.
