net/lwip: test/dm eth: use lwip variant for tests
Use lwip variant for unit tests. 'ethrotate' test is disabled,
I think we should switch to support routing tables and command
line arguments liKe 'dhcp all' or 'dhcp eth0&' (background),
then just rotate all available ethernet cards and send request.

Signed-off-by: Maxim Uvarov <maxim.uvarov@linaro.org>

--- a/board/sandbox/sandbox.env
+++ b/board/sandbox/sandbox.env
@@ -10,6 +10,7 @@ eth6addr=02:00:11:22:33:47
 eth7addr=02:00:11:22:33:41
 eth2addr=02:00:11:22:33:42
 ipaddr=192.0.2.1
+ipaddr2=1.2.3.100
 
 /*
  * These are used for distro boot which is not supported. But once bootmethod
