--- a/board/sandbox/sandbox.env
+++ b/board/sandbox/sandbox.env
@@ -7,6 +7,8 @@ stderr=serial,vidconsole
 
 ethaddr=02:00:11:22:33:44
 eth6addr=02:00:11:22:33:47
+eth7addr=02:00:11:22:33:41
+eth2addr=02:00:11:22:33:42
 ipaddr=192.0.2.1
 
 /*
