riscv: qemu: imply GOLDFISH_RTC
QEMU's virt board provides an emulated Goldfish RTC. Enable the driver by
default.

Signed-off-by: Heinrich Schuchardt <heinrich.schuchardt@canonical.com>

--- a/board/emulation/qemu-riscv/Kconfig
+++ b/board/emulation/qemu-riscv/Kconfig
@@ -60,6 +60,8 @@ config BOARD_SPECIFIC_OPTIONS # dummy
 	imply NVME_PCI
 	imply PCIE_ECAM_GENERIC
 	imply DM_RNG
+	imply DM_RTC
+	imply RTC_GOLDFISH
 	imply SCSI
 	imply SYS_NS16550
 	imply SIFIVE_SERIAL
