arm64: zynqmp: Describe interrupt by using macro (OCM)
OCM controller interrupt description hasn't been converted by using macros
that's why fix it now.

Fixes: 6b049190c9c5 ("arm64: zynqmp: Describe interrupts by using macros")
Signed-off-by: Michal Simek <michal.simek@amd.com>
Link: https://lore.kernel.org/r/6a51f47d239002679db03a787057fdc58610515d.1704709554.git.michal.simek@amd.com

--- a/arch/arm/dts/zynqmp.dtsi
+++ b/arch/arm/dts/zynqmp.dtsi
@@ -737,7 +737,7 @@
 			compatible = "xlnx,zynqmp-ocmc-1.0";
 			reg = <0x0 0xff960000 0x0 0x1000>;
 			interrupt-parent = <&gic>;
-			interrupts = <0 10 4>;
+			interrupts = <GIC_SPI 10 IRQ_TYPE_LEVEL_HIGH>;
 		};
 
 		pcie: pcie@fd0e0000 {
