--- a/cmd/Kconfig
+++ b/cmd/Kconfig
@@ -1085,7 +1085,7 @@ config CMD_FASTBOOT
 config CMD_FLASH
 	bool "flinfo, erase, protect"
 	default y
-	depends on MTD || FLASH_CFI_DRIVER || MTD_NOR_FLASH
+	depends on FLASH_CFI_DRIVER || MTD_NOR_FLASH
 	help
 	  NOR flash support.
 	    flinfo - print FLASH memory information
