Add Phytec i.MX93 support
Add support for the Phytec i.MX93 Segin evaluation kit. The SoM consists
of an NXP i.MX93 dual A55 CPU. The SoM is mounted on a Phytec Segin SBC.

Signed-off-by: Mathieu Othacehe <othacehe@gnu.org>

--- a/arch/arm/mach-imx/imx9/Kconfig
+++ b/arch/arm/mach-imx/imx9/Kconfig
@@ -37,10 +37,16 @@ config TARGET_IMX93_VAR_SOM
 	select IMX93
 	select IMX9_LPDDR4X
 
+config TARGET_IMX93_PHYCORE
+	bool "imx93_phycore"
+	select IMX93
+	select IMX9_LPDDR4X
+
 endchoice
 
 source "board/freescale/imx93_evk/Kconfig"
 source "board/variscite/imx93_var_som/Kconfig"
+source "board/phytec/imx93_phycore/Kconfig"
 
 endif
 
