Revert "cmd: Set modern hush as default shell"
Currently at least two SoC families are able to cause a crash using
their regular boot scripts, with the new parser.  For now, revert to the
old parser as default.

This reverts commit 78912cfde281146d28254b230ecaa9b06722e6ff.

Signed-off-by: Tom Rini <trini@konsulko.com>

--- a/cmd/Kconfig
+++ b/cmd/Kconfig
@@ -27,16 +27,20 @@ depends on HUSH_PARSER
 
 config HUSH_OLD_PARSER
 	bool "Use hush old parser"
+	default y
 	help
 	  This option enables the old flavor of hush based on hush Busybox from
 	  2005.
 
+	  It is actually the default U-Boot shell when decided to use hush as shell.
+
 config HUSH_MODERN_PARSER
 	bool "Use hush modern parser"
-	default y
 	help
 	  This option enables the new flavor of hush based on hush upstream
 	  Busybox.
+
+	  This parser is experimental and not well tested.
 
 config HUSH_SELECTABLE
 	bool
